--- a/package.json
+++ b/package.json
@@ -20,25 +20,32 @@
 	},
 	"dependencies": {
 		"@prisma/client": "^6.5.0",
+		"@radix-ui/react-avatar": "^1.1.3",
 		"@radix-ui/react-checkbox": "^1.1.4",
 		"@radix-ui/react-dialog": "^1.1.6",
+		"@radix-ui/react-dropdown-menu": "^2.1.6",
 		"@radix-ui/react-label": "^2.1.2",
+		"@radix-ui/react-popover": "^1.1.6",
+		"@radix-ui/react-select": "^2.1.6",
 		"@radix-ui/react-separator": "^1.1.2",
 		"@radix-ui/react-slot": "^1.1.2",
 		"@radix-ui/react-tooltip": "^1.1.8",
+		"@remixicon/react": "^4.6.0",
 		"@t3-oss/env-nextjs": "^0.12.0",
 		"@tanstack/react-query": "^5.69.0",
+		"@tanstack/react-table": "^8.21.2",
 		"@trpc/client": "^11.0.0",
 		"@trpc/react-query": "^11.0.0",
 		"@trpc/server": "^11.0.0",
 		"better-auth": "^1.2.5",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
+		"cmdk": "^1.1.1",
 		"lucide-react": "^0.487.0",
 		"next": "^15.2.3",
+		"nuqs": "^2.4.1",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
-		"react-icons": "^5.5.0",
 		"server-only": "^0.0.1",
 		"sonner": "^2.0.3",
 		"superjson": "^2.2.1",
